--- a/doxygen-awesome.css
+++ b/doxygen-awesome.css
@@ -248,21 +248,21 @@ html {
 html.dark-mode {
     color-scheme: dark;
 
-    --primary-color: #1982d2;
+    --primary-color: rgb(30,188,157); /* Modified */
     --primary-dark-color: #86a9c4;
     --primary-light-color: #4779ac;
 
-    --box-shadow: 0 2px 8px 0 rgba(0,0,0,.30);
+    --box-shadow: 0 2px 8px 0 rgba(0,0,0,.35);
 
-    --odd-color: rgba(100,100,100,.06);
+    --odd-color: rgb(36, 44, 44);
 
     --menu-selected-background: rgba(0,0,0,.4);
 
-    --page-background-color: #1C1D1F;
+    --page-background-color: rgb(32, 36, 36); /* Modified */
     --page-foreground-color: #d2dbde;
     --page-secondary-foreground-color: #859399;
     --separator-color: #38393b;
-    --side-nav-background: #252628;
+    --side-nav-background: rgb(39, 47, 47); /* Modified */
 
     --code-background: #2a2c2f;
 
